--- a/src/app/products/pages/add/add.component.html
+++ b/src/app/products/pages/add/add.component.html
@@ -19,7 +19,8 @@
       <span class="form-text"
             *ngIf="ValidErrors('name')"
             ErrMsg
-            color="blue">
+            color="blue"
+            msg="Required**">
 
             Required
       </span>
